fix the jumping footer for realz

--- a/site/css/layout/_footer.scss
+++ b/site/css/layout/_footer.scss
@@ -11,10 +11,6 @@ footer {
         padding-top: 2.25rem;
         padding-bottom: 3rem;
     }
-
-    // This is overridden in default.html once the main padding has been
-    // calculated.
-    visibility: hidden;
 }
 
 footer h4 {
